# SimNeuron

./: CMakeLists.txt
3rd/: glm.cmake
include/util/: FPS_camera.h  math.h  point_octree.hpp
src/: CMakeLists.txt
src/mouse/: CMakeLists.txt
src/worm/: CMakeLists.txt  gl_view.hpp  image_read.cpp  image_read.h  main.cpp  main_window.hpp  main_window.ui  neuron_position.txt  worm_data.hpp  worm_neuron_data.hpp  worm_renderer.hpp
src/worm/shader/: background3D.fs  background3D.vs  neuron3D.fs  neuron3D.gs  neuron3D.vs  normal3D.fs  normal3D.vs  worm2D.fs  worm2D.gs  worm2D.vs  worm3D.fs  worm3D.gs  worm3D.vs
test/point_octree/: CMakeLists.txt  main.cpp
